--- a/packages/apex-language-server/package.yaml
+++ b/packages/apex-language-server/package.yaml
@@ -22,5 +22,6 @@ schemas:
 share:
   apex-language-server/apex-jorje-lsp.jar: extension/dist/apex-jorje-lsp.jar
 
-neovim:
-  lspconfig: apex_ls
+# This server is not yet migrated to vim.lsp.config in nvim-lspconfig
+# neovim:
+#   lspconfig: apex_ls
