--- a/packages/just-lsp/package.yaml
+++ b/packages/just-lsp/package.yaml
@@ -18,8 +18,17 @@ source:
     - target: win_arm64
       file: just-lsp-{{version}}-aarch64-pc-windows-msvc.zip
       bin: just-lsp.exe
+    - target: linux_arm64_gnu
+      file: just-lsp-{{version}}-aarch64-unknown-linux-gnu.tar.gz
+      bin: just-lsp
     - target: linux_arm64_musl
       file: just-lsp-{{version}}-aarch64-unknown-linux-musl.tar.gz
+      bin: just-lsp
+    - target: linux_arm_gnu
+      file: just-lsp-{{version}}-arm-unknown-linux-gnueabihf.tar.gz
+      bin: just-lsp
+    - target: linux_armv7_gnu
+      file: just-lsp-{{version}}-armv7-unknown-linux-gnueabihf.tar.gz
       bin: just-lsp
     - target: linux_arm
       file: just-lsp-{{version}}-armv7-unknown-linux-musleabihf.tar.gz
@@ -32,6 +41,9 @@ source:
       bin: just-lsp.exe
     - target: linux_x64_musl
       file: just-lsp-{{version}}-x86_64-unknown-linux-musl.tar.gz
+      bin: just-lsp
+    - target: linux_x64_gnu
+      file: just-lsp-{{version}}-x86_64-unknown-linux-gnu.tar.gz
       bin: just-lsp
 
 bin:
