fix(typstfmt): add deprecation notice (#9598)
Co-authored-by: Chris Grieser <73286100+chrisgrieser@users.noreply.github.com>
Co-authored-by: williambotman[bot] <william+bot@redwill.se>

--- a/packages/typstfmt/package.yaml
+++ b/packages/typstfmt/package.yaml
@@ -10,6 +10,10 @@ languages:
 categories:
   - Formatter
 
+deprecation:
+  message: Package is unmaintained.
+  since: v0.2.10
+
 source:
   id: pkg:github/astrale-sharp/typstfmt@0.2.10
   asset:
