feat: add missing nvim-lspconfig specs to some LSPs

--- a/packages/ltex-ls-plus/package.yaml
+++ b/packages/ltex-ls-plus/package.yaml
@@ -61,3 +61,6 @@ schemas:
 bin:
   ltex-ls-plus: "{{source.asset.bin.lsp}}"
   ltex-cli-plus: "{{source.asset.bin.cli}}"
+
+neovim:
+  lspconfig: ltex_plus
