fix: `assets` instead of `asset`

--- a/packages/xcode-build-server/package.yaml
+++ b/packages/xcode-build-server/package.yaml
@@ -11,11 +11,10 @@ categories:
 
 source:
   id: pkg:github/SolaWing/xcode-build-server@v1.2.0
-  assets:
+  asset:
     - target: darwin_arm64
       file: "{{ version }}.tar.gz"
       bin: xcode-build-server
-
     - target: darwin_x64
       file: "{{ version }}.tar.gz"
       bin: xcode-build-server
