--- a/packages/fnlfmt/package.yaml
+++ b/packages/fnlfmt/package.yaml
@@ -11,7 +11,10 @@ categories:
 
 source:
   # renovate:datasource=git-tags
-  id: pkg:git/https://git.sr.ht/~technomancy/fnlfmt@v0.3.2
+  id: pkg:generic/https://git.sr.ht/~technomancy/fnlfmt@v0.3.2
+  download:
+    files:
+      fnlfmt-{{version}}.tar.gz: https://git.sr.ht/~technomancy/fnlfmt/archive/{{version}}.tar.gz
   build:
     run: make
     bin: fnlfmt
