--- a/packages/omnisharp/package.yaml
+++ b/packages/omnisharp/package.yaml
@@ -15,29 +15,23 @@ source:
   id: pkg:github/OmniSharp/omnisharp-roslyn@v1.39.13
   asset:
     - target: darwin_x64
-      file: omnisharp-osx-x64-net6.0.zip
-      bin: OmniSharp
+      file: omnisharp-osx-x64-net6.0.zip:libexec/
     - target: darwin_arm64
-      file: omnisharp-osx-arm64-net6.0.zip
-      bin: OmniSharp
+      file: omnisharp-osx-arm64-net6.0.zip:libexec/
     - target: linux_x64
-      file: omnisharp-linux-x64-net6.0.zip
-      bin: OmniSharp
+      file: omnisharp-linux-x64-net6.0.zip:libexec/
     - target: linux_arm64
-      file: omnisharp-linux-arm64-net6.0.zip
-      bin: OmniSharp
+      file: omnisharp-linux-arm64-net6.0.zip:libexec/
     - target: win_x64
-      file: omnisharp-win-x64-net6.0.zip
-      bin: OmniSharp.exe
+      file: omnisharp-win-x64-net6.0.zip:libexec/
     - target: win_arm64
-      file: omnisharp-win-arm64-net6.0.zip
-      bin: OmniSharp.exe
+      file: omnisharp-win-arm64-net6.0.zip:libexec/
 
 schemas:
   lsp: vscode:https://raw.githubusercontent.com/OmniSharp/omnisharp-vscode/master/package.json
 
 bin:
-  OmniSharp: "{{source.asset.bin}}"
+  OmniSharp: dotnet:libexec/OmniSharp.dll
 
 neovim:
   lspconfig: omnisharp
