--- a/packages/prometheus-pint/package.yaml
+++ b/packages/prometheus-pint/package.yaml
@@ -34,5 +34,8 @@ source:
       file: pint-{{ version | strip_prefix "v" }}-windows-amd64.tar.gz
       bin: pint-windows-amd64.exe
 
+# Has to use `prometheus-pint` as name for the symlink/bin to avoid conflict 
+# with the `pint` binary (a php linter) which is also available on mason. 
+# see https://github.com/mason-org/mason-registry/pull/10126#issuecomment-2920049754
 bin:
   prometheus-pint: "{{source.asset.bin}}"
