feat(vue-language-server): link package directory to share/
Allows the TypeScript plugin to be used like this:

```
{
  name = "@vue/typescript-plugin",
  location = vim.fn.expand("$MASON/share/vue-language-server"),
  languages = { "vue" },
}
```

Closes #10189

--- a/packages/vue-language-server/package.yaml
+++ b/packages/vue-language-server/package.yaml
@@ -20,5 +20,8 @@ schemas:
 bin:
   vue-language-server: npm:vue-language-server
 
+share:
+  vue-language-server: node_modules/@vue/language-server
+
 neovim:
   lspconfig: vue_ls
