--- a/packages/uv/package.yaml
+++ b/packages/uv/package.yaml
@@ -10,7 +10,7 @@ languages: []
 categories: []
 
 source:
-  id: pkg:github/astral-sh/uv@v0.7.12
+  id: pkg:github/astral-sh/uv@0.7.12
   asset:
     - target: darwin_x64
       file: uv-x86_64-apple-darwin.tar.gz
