fix(uv): fix bin paths

--- a/packages/uv/package.yaml
+++ b/packages/uv/package.yaml
@@ -14,43 +14,43 @@ source:
   asset:
     - target: darwin_x64
       file: uv-x86_64-apple-darwin.tar.gz
-      uv: uv
-      uvx: uvx
+      uv: uv-x86_64-apple-darwin/uv
+      uvx: uv-x86_64-apple-darwin/uvx
     - target: darwin_arm64
       file: uv-aarch64-apple-darwin.tar.gz
-      uv: uv
-      uvx: uvx
+      uv: uv-aarch64-apple-darwin/uv
+      uvx: uv-aarch64-apple-darwin/uvx
     - target: linux_x64
       file: uv-x86_64-unknown-linux-gnu.tar.gz
-      uv: uv
-      uvx: uvx
+      uv: uv-x86_64-unknown-linux-gnu/uv
+      uvx: uv-x86_64-unknown-linux-gnu/uvx
     - target: linux_x86
       file: uv-i686-unknown-linux-gnu.tar.gz
-      uv: uv
-      uvx: uvx
+      uv: uv-i686-unknown-linux-gnu/uv
+      uvx: uv-i686-unknown-linux-gnu/uvx
     - target: linux_arm64
       file: uv-aarch64-unknown-linux-gnu.tar.gz
-      uv: uv
-      uvx: uvx
+      uv: uv-aarch64-unknown-linux-gnu/uv
+      uvx: uv-aarch64-unknown-linux-gnu/uvx
     - target: linux_arm
       file: uv-armv7-unknown-linux-gnueabihf.tar.gz
-      uv: uv
-      uvx: uvx
+      uv: uv-armv7-unknown-linux-gnueabihf/uv
+      uvx: uv-armv7-unknown-linux-gnueabihf/uvx
     - target: win_x64
       file: uv-x86_64-pc-windows-msvc.zip
-      uv: uv.exe
-      uvw: uvw.exe
-      uvx: uvx.exe
+      uv: uv-x86_64-pc-windows-msvc/uv.exe
+      uvw: uv-x86_64-pc-windows-msvc/uvw.exe
+      uvx: uv-x86_64-pc-windows-msvc/uvx.exe
     - target: win_x86
       file: uv-i686-pc-windows-msvc.zip
-      uv: uv.exe
-      uvw: uvw.exe
-      uvx: uvx.exe
+      uv: uv-i686-pc-windows-msvc/uv.exe
+      uvw: uv-i686-pc-windows-msvc/uvw.exe
+      uvx: uv-i686-pc-windows-msvc/uvx.exe
     - target: win_arm64
       file: uv-aarch64-pc-windows-msvc.zip
-      uv: uv.exe
-      uvw: uvw.exe
-      uvx: uvx.exe
+      uv: uv-aarch64-pc-windows-msvc/uv.exe
+      uvw: uv-aarch64-pc-windows-msvc/uvw.exe
+      uvx: uv-aarch64-pc-windows-msvc/uvx.exe
 
 bin:
   uv: "{{source.asset.uv}}"
