fix(package): update bin entries to correct PyPI package names
- change bin.vectorcode to pypi:vectorcode
- change bin.vectorcode-server to pypi:vectorcode-server
- change bin.vectorcode-mcp-server to pypi:vectorcode-mcp-server

--- a/packages/vectorcode/package.yaml
+++ b/packages/vectorcode/package.yaml
@@ -13,9 +13,9 @@ source:
   id: pkg:pypi/VectorCode@0.6.12?extra=lsp
 
 bin:
-  vectorcode: pypi:VectorCode
-  vectorcode-server: pypi:VectorCode
-  vectorcode-mcp-server: pypi:VectorCode
+  vectorcode: pypi:vectorcode
+  vectorcode-server: pypi:vectorcode-server
+  vectorcode-mcp-server: pypi:vectorcode-mcp-server
 
 neovim:
   lspconfig: vectorcode_server
