--- a/packages/ols/package.yaml
+++ b/packages/ols/package.yaml
@@ -21,6 +21,9 @@ source:
     - target: linux_x64_gnu
       file: ols-x86_64-unknown-linux-gnu.zip
       bin: ols-x86_64-unknown-linux-gnu
+    - target: linux_arm64_gnu
+      file: ols-arm64-unknown-linux-gnu.zip
+      bin: ols-arm64-unknown-linux-gnu
     - target: win_x86
       file: ols-x86_64-pc-windows-msvc.zip
       bin: ols-x86_64-pc-windows-msvc.exe
