Fixing vscode-java-dependency file

--- a/packages/vscode-java-dependency/package.yaml
+++ b/packages/vscode-java-dependency/package.yaml
@@ -12,7 +12,7 @@ categories:
 source:
   id: pkg:openvsx/vscjava/vscode-java-dependency@0.24.1
   download:
-    file: https://open-vsx.org/api/vscjava/vscode-java-dependency/0.24.1/file/vscjava.vscode-java-dependency-0.24.1.vsix
+    file: vscjava.vscode-java-dependency-0.24.1.vsix
 
 share:
   vscode-java-dependency/: extension/server/
