--- a/packages/asmodeus-lsp/package.yaml
+++ b/packages/asmodeus-lsp/package.yaml
@@ -6,6 +6,7 @@ licenses:
   - MIT
 languages:
   - assembly
+  - asmodeus
 categories:
   - LSP
 
@@ -13,19 +14,19 @@ source:
   id: pkg:github/asmod-lang/asmodeus-lsp@v0.1.1
   asset:
     - target: darwin_x64
-      file: asmodeus-lsp-v0.1.1-x86_64-apple-darwin.tar.gz
+      file: asmodeus-lsp-{{version}}-x86_64-apple-darwin.tar.gz
       bin: asmodeus-lsp
     - target: darwin_arm64
-      file: asmodeus-lsp-v0.1.1-aarch64-apple-darwin.tar.gz
+      file: asmodeus-lsp-{{version}}-aarch64-apple-darwin.tar.gz
       bin: asmodeus-lsp
     - target: linux_x64
-      file: asmodeus-lsp-v0.1.1-x86_64-unknown-linux-gnu.tar.gz
+      file: asmodeus-lsp-{{version}}-x86_64-unknown-linux-gnu.tar.gz
       bin: asmodeus-lsp
     - target: linux_arm64
-      file: asmodeus-lsp-v0.1.1-aarch64-unknown-linux-gnu.tar.gz
+      file: asmodeus-lsp-{{version}}-aarch64-unknown-linux-gnu.tar.gz
       bin: asmodeus-lsp
     - target: win_x64
-      file: asmodeus-lsp-v0.1.1-x86_64-pc-windows-msvc.zip
+      file: asmodeus-lsp-{{version}}-x86_64-pc-windows-msvc.zip
       bin: asmodeus-lsp.exe
 
 bin:
