--- a/packages/node-debug2-adapter/package.yaml
+++ b/packages/node-debug2-adapter/package.yaml
@@ -10,6 +10,10 @@ languages:
 categories:
   - DAP
 
+deprecation:
+  since: v1.43.0
+  message: This adapter has been superseded by the js-debug-adapter.
+
 source:
   # renovate:datasource=github-tags
   id: pkg:github/microsoft/vscode-node-debug2@v1.43.0
