--- a/packages/vscode-java-dependency/package.yaml
+++ b/packages/vscode-java-dependency/package.yaml
@@ -7,7 +7,7 @@ licenses:
 languages:
   - Java
 categories:
-  - Runtime
+  - LSP
 
 source:
   id: pkg:openvsx/vscjava/vscode-java-dependency@0.24.1
