--- a/packages/jdtls/package.yaml
+++ b/packages/jdtls/package.yaml
@@ -39,7 +39,7 @@ share:
   jdtls/lombok.jar: lombok.jar
   jdtls/plugins/: plugins/
   jdtls/plugins/org.eclipse.equinox.launcher.jar: plugins/org.eclipse.equinox.launcher_1.7.0.v20250519-0528.jar
-  dtls/config/: "{{source.download.config}}"
+  jdtls/config/: "{{source.download.config}}"
 
 neovim:
   lspconfig: jdtls
