--- a/packages/beancount-language-server/package.yaml
+++ b/packages/beancount-language-server/package.yaml
@@ -10,7 +10,7 @@ categories:
   - LSP
 
 source:
-  id: pkg:cargo/beancount-language-server@1.3.7?locked=false
+  id: pkg:cargo/beancount-language-server@v1.4.1?locked=false
 
 bin:
   beancount-language-server: cargo:beancount-language-server
