--- a/packages/wgsl-analyzer/package.yaml
+++ b/packages/wgsl-analyzer/package.yaml
@@ -11,6 +11,7 @@ categories:
   - LSP
 
 source:
+  # renovate:versioning=loose
   id: pkg:github/wgsl-analyzer/wgsl-analyzer@v0.9.11
   asset:
     - target: [darwin_arm64, darwin_x64]
