Add version constraints for versions <=v0.9.11

--- a/packages/wgsl-analyzer/package.yaml
+++ b/packages/wgsl-analyzer/package.yaml
@@ -36,6 +36,20 @@ source:
       file: wgsl-analyzer-aarch64-pc-windows-msvc.zip
       bin: wgsl-analyzer.exe
 
+  version_overrides:
+    - constraint: semver:<=v0.9.11
+      id: pkg:github/wgsl-analyzer/wgsl-analyzer@v0.9.11
+      asset:
+        - target: [darwin_arm64, darwin_x64]
+          file: wgsl-analyzer-darwin-x64
+          bin: wgsl-analyzer-darwin-x64
+        - target: linux_x64
+          file: wgsl-analyzer-linux-x64
+          bin: wgsl-analyzer-linux-x64
+        - target: win_x64
+          file: wgsl-analyzer-win32-x64.exe
+          bin: wgsl-analyzer-win32-x64.exe
+
 schemas:
   lsp: vscode:https://raw.githubusercontent.com/wgsl-analyzer/wgsl-analyzer/{{version}}/editors/code/package.json
 
