fix(vectorcode): add the mcp extra (#10674)
Co-authored-by: Chris Grieser <73286100+chrisgrieser@users.noreply.github.com>

--- a/packages/vectorcode/package.yaml
+++ b/packages/vectorcode/package.yaml
@@ -10,7 +10,7 @@ categories:
   - LSP
 
 source:
-  id: pkg:pypi/VectorCode@0.7.11?extra=lsp
+  id: pkg:pypi/VectorCode@0.7.11?extra=lsp,mcp
 
 bin:
   vectorcode: pypi:vectorcode
