--- a/packages/fnlfmt/package.yaml
+++ b/packages/fnlfmt/package.yaml
@@ -22,7 +22,7 @@ source:
         cd fnlfmt-*
         echo "#!/usr/bin/env lua" > ../fnlfmt
         LUA_PATH="./?.lua" ./fennel --require-as-include --compile cli.fnl >> ../fnlfmt
-        chmod +x fnlfmt
+        chmod +x ../fnlfmt
       bin: fnlfmt
     - target: win_x64
       run: |
