--- a/packages/fennel-ls/package.yaml
+++ b/packages/fennel-ls/package.yaml
@@ -17,3 +17,13 @@ bin:
 
 neovim:
   lspconfig: fennel_ls
+
+ci_skip:
+  # Per xerool, the author of fennel-ls:
+  #
+  #     Eventually they'll .. create a PR for bumping fennel-ls, and when that PR's CI inevitably fails,
+  #     we'll have to convince them that it's okay to be broken in windows.
+  #
+  # See: https://todo.sr.ht/~xerool/fennel-ls/54#event-419872
+  #
+  - win_x64
