Added musl/alpine support to tinymist

--- a/packages/tinymist/package.yaml
+++ b/packages/tinymist/package.yaml
@@ -16,8 +16,12 @@ source:
   asset:
     - target: linux_x64_gnu
       file: tinymist-linux-x64
+    - target: linux_x64_musl
+      file: tinymist-alpine-x64
     - target: linux_arm64_gnu
       file: tinymist-linux-arm64
+    - target: linux_arm64_musl
+      file: tinymist-alpine-arm64
     - target: darwin_x64
       file: tinymist-darwin-x64
     - target: darwin_arm64
