--- a/packages/docker-language-server/package.yaml
+++ b/packages/docker-language-server/package.yaml
@@ -26,7 +26,7 @@ source:
       file: docker-language-server-windows-amd64-{{version}}.exe
 
 bin:
-  docker-language-server: {{source.asset.file}}
+  docker-language-server: "{{source.asset.file}}"
 
 neovim:
   lspconfig: docker-language-server
