fix(docker-language-server): lspconfig server name

--- a/packages/docker-language-server/package.yaml
+++ b/packages/docker-language-server/package.yaml
@@ -29,5 +29,5 @@ bin:
   docker-language-server: "{{source.asset.file}}"
 
 neovim:
-  lspconfig: docker-language-server
+  lspconfig: docker_language_server
 
