feat(hadolint): Adds support for Darwin arm64 back
arm64 support was removed in https://github.com/mason-org/mason-registry/pull/10075/ this PR adds that support back.

--- a/packages/hadolint/package.yaml
+++ b/packages/hadolint/package.yaml
@@ -14,6 +14,8 @@ source:
   asset:
     - target: darwin_x64
       file: hadolint-Darwin-x86_64
+    - target: darwin_arm64
+      file: hadolint-Macos-arm64
     - target: linux_x64
       file: hadolint-Linux-x86_64
     - target: linux_arm64
