--- a/packages/hadolint/package.yaml
+++ b/packages/hadolint/package.yaml
@@ -13,13 +13,28 @@ source:
   id: pkg:github/hadolint/hadolint@v2.13.1
   asset:
     - target: darwin_x64
-      file: hadolint-macOS-x86_64
+      file: hadolint-macos-x86_64
+    - target: darwin_arm64
+      file: hadolint-macos-arm64
     - target: linux_x64
       file: hadolint-Linux-x86_64
     - target: linux_arm64
       file: hadolint-Linux-arm64
     - target: win_x64
       file: hadolint-Windows-x86_64.exe
+
+  version_overrides:
+    - constraint: semver:<=2.12.0
+      id: pkg:github/hadolint/hadolint@v2.12.0
+      asset:
+        - target: darwin_x64
+          file: hadolint-Darwin-x86_64
+        - target: linux_x64
+          file: hadolint-Linux-x86_64
+        - target: linux_arm64
+          file: hadolint-Linux-arm64
+        - target: win_x64
+          file: hadolin
 
 bin:
   hadolint: "{{source.asset.file}}"
