--- a/packages/cortex-debug/package.yaml
+++ b/packages/cortex-debug/package.yaml
@@ -12,7 +12,7 @@ categories:
   - DAP
 
 source:
-  id: pkg:openvsx/marus25/cortex-debug@1.12.1
+  id: pkg:openvsx/marus25/cortex-debug@1.13.0-pre6
   download:
     file: marus25.cortex-debug-{{version}}.vsix
 
