--- a/packages/google-java-format/package.yaml
+++ b/packages/google-java-format/package.yaml
@@ -12,7 +12,22 @@ categories:
 source:
   id: pkg:github/google/google-java-format@v1.28.0
   asset:
-    file: google-java-format-{{ version | strip_prefix "v" }}-all-deps.jar
+    - target: darwin_arm64
+      file: google-java-format_darwin-arm64
+      bin: google-java-format_darwin-arm64
+    - target: linux_arm64
+      file: google-java-format_linux-arm64
+      bin: google-java-format_linux-arm64
+    - target: linux_x64
+      file: google-java-format_linux-x86-64
+      bin: google-java-format_linux-x86-64
+    - target: win_x64
+      file: google-java-format_windows-x86-64.exe
+      bin: google-java-format_windows-x86-64.exe
+    # All other platforms that don't have binary
+    - target: [unix, win]
+      file: google-java-format-{{ version | strip_prefix "v" }}-all-deps.jar
+      bin: java-jar:google-java-format-{{ version | strip_prefix "v" }}-all-deps.jar
 
 bin:
-  google-java-format: java-jar:{{source.asset.file}}
+  google-java-format: "{{source.asset.bin}}"
