feat(harper-ls): add musl/alpine support

--- a/packages/harper-ls/package.yaml
+++ b/packages/harper-ls/package.yaml
@@ -27,8 +27,14 @@ source:
     - target: linux_x64_gnu
       file: harper-ls-x86_64-unknown-linux-gnu.tar.gz
       bin: harper-ls
+    - target: linux_x64_musl
+      file:  harper-ls-x86_64-unknown-linux-musl.tar.gz
+      bin: harper-ls
     - target: linux_arm64_gnu
       file: harper-ls-aarch64-unknown-linux-gnu.tar.gz
+      bin: harper-ls
+    - target: linux_arm64_musl
+      file: harper-ls-aarch64-unknown-linux-musl.tar.gz
       bin: harper-ls
     - target: darwin_x64
       file: harper-ls-x86_64-apple-darwin.tar.gz
