feat(goimports-reviser): Add linux-arm64 binary.
`goimports-reviser` started releasing linux-arm64 binary from v3.9.1
onwards:
    https://github.com/incu6us/goimports-reviser/releases/tag/v3.9.1

Let's update the registry entry to add include the same.

Signed-off-by: Kunal Gangakhedkar <kunal.gangakhedkar@gmail.com>

--- a/packages/goimports-reviser/package.yaml
+++ b/packages/goimports-reviser/package.yaml
@@ -24,6 +24,9 @@ source:
     - target: linux_x64
       file: goimports-reviser_{{ version | strip_prefix "v" }}_linux_amd64.tar.gz
       bin: goimports-reviser
+    - target: linux_arm64
+      file: goimports-reviser_{{ version | strip_prefix "v" }}_linux_arm64.tar.gz
+      bin: goimports-reviser
     - target: win_x64
       file: goimports-reviser_{{ version | strip_prefix "v" }}_windows_amd64.tar.gz
       bin: goimports-reviser.exe
