Allow the Docker Language Server to be installed on musl systems
From testing, the Docker Language Server does run on Alpine Linux so we
should add targets for musl in the configuration file.

Signed-off-by: Remy Suen <remy.suen@docker.com>

--- a/packages/docker-language-server/package.yaml
+++ b/packages/docker-language-server/package.yaml
@@ -18,7 +18,11 @@ source:
       file: docker-language-server-darwin-arm64-{{version}}
     - target: linux_arm64_gnu
       file: docker-language-server-linux-arm64-{{version}}
+    - target: linux_arm64_musl
+      file: docker-language-server-linux-arm64-{{version}}
     - target: linux_x64_gnu
+      file: docker-language-server-linux-amd64-{{version}}
+    - target: linux_x64_musl
       file: docker-language-server-linux-amd64-{{version}}
     - target: win_arm64
       file: docker-language-server-windows-arm64-{{version}}.exe
