fix(fortitude): fix Windows & Linux GNU ARM bin path

--- a/packages/fortitude/package.yaml
+++ b/packages/fortitude/package.yaml
@@ -29,7 +29,7 @@ source:
       bin: fortitude-i686-unknown-linux-musl/fortitude
     - target: linux_arm64_gnu
       file: fortitude-aarch64-unknown-linux-gnu.tar.gz
-      bin: fortitude
+      bin: fortitude-aarch64-unknown-linux-gnu/fortitude
     - target: linux_x64_gnu
       file: fortitude-x86_64-unknown-linux-gnu.tar.gz
       bin: fortitude-x86_64-unknown-linux-gnu/fortitude
@@ -38,13 +38,13 @@ source:
       bin: fortitude-i686-unknown-linux-gnu/fortitude
     - target: win_arm64
       file: fortitude-aarch64-pc-windows-msvc.zip
-      bin: fortitude-aarch64-pc-windows-msvc/fortitude
+      bin: fortitude.exe
     - target: win_x64
       file: fortitude-x86_64-pc-windows-msvc.zip
-      bin: fortitude-x86_64-pc-windows-msvc/fortitude
+      bin: fortitude.exe
     - target: win_x86
       file: fortitude-i686-pc-windows-msvc.zip
-      bin: fortitude-i686-pc-windows-msvc/fortitude
+      bin: fortitude.exe
 
 bin:
   fortitude: "{{source.asset.bin}}"
