--- a/packages/java-test/package.yaml
+++ b/packages/java-test/package.yaml
@@ -21,10 +21,10 @@ categories:
   - DAP
 
 source:
-  id: pkg:openvsx/vscjava/vscode-java-test@0.43.1
+  id: pkg:openvsx/vscjava/vscode-java-test@0.43.2
   download:
     file: vscjava.vscode-java-test-{{version}}.vsix
 
 share:
   java-test/: extension/server/
-  java-test/com.microsoft.java.test.plugin.jar: extension/server/com.microsoft.java.test.plugin-{{version}}.jar
+  java-test/com.microsoft.java.test.plugin.jar: extension/server/com.microsoft.java.test.plugin-0.43.1.jar
