--- a/packages/helm-ls/package.yaml
+++ b/packages/helm-ls/package.yaml
@@ -18,7 +18,7 @@ source:
       file: helm_ls_darwin_arm64
     - target: linux_x64_gnu
       file: helm_ls_linux_amd64
-    - target: linux_arm64
+    - target: linux_arm
       file: helm_ls_linux_arm
     - target: linux_arm64
       file: helm_ls_linux_arm64
