--- a/packages/mesonlsp/package.yaml
+++ b/packages/mesonlsp/package.yaml
@@ -15,6 +15,9 @@ source:
     - target: linux_x64
       file: mesonlsp-x86_64-unknown-linux-musl.zip
       bin: mesonlsp
+    - target: linux_arm64
+      file: mesonlsp-aarch64-unknown-linux-musl.zip
+      bin: mesonlsp
     - target: darwin_x64
       file: mesonlsp-x86_64-apple-darwin.zip
       bin: mesonlsp
